PBEXENGDQA-4614 add: test IssueTicketResources v3